feat: Allow custom Data Integrity Checks [DHIS2-15626]