@@ -28,8 +28,9 @@
 package org.hisp.dhis.dataintegrity;
 
 import static java.util.stream.Collectors.toList;
-import static java.util.stream.Collectors.toUnmodifiableList;
 import static org.hisp.dhis.common.CodeGenerator.isValidUid;
+import static org.hisp.dhis.dataintegrity.DataIntegrityYamlReader.ResourceLocation.CLASS_PATH;
+import static org.hisp.dhis.dataintegrity.DataIntegrityYamlReader.ResourceLocation.FILE_SYSTEM;
 import static org.hisp.dhis.dataintegrity.DataIntegrityYamlReader.readDataIntegrityYaml;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -41,7 +42,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.hisp.dhis.dataintegrity.DataIntegrityDetails.DataIntegrityIssue;
 import org.junit.jupiter.api.Test;
@@ -56,24 +56,11 @@ class DataIntegrityYamlReaderTest {
   void testReadDataIntegrityYaml() {
 
     List<DataIntegrityCheck> checks = new ArrayList<>();
-    readDataIntegrityYaml(
-        "data-integrity-checks.yaml",
-        checks::add,
-        (property, defaultValue) -> defaultValue,
-        sql -> check -> new DataIntegritySummary(check, new Date(), new Date(), null, 1, 100d),
-        sql ->
-            check ->
-                new DataIntegrityDetails(
-                    check,
-                    new Date(),
-                    new Date(),
-                    null,
-                    List.of(new DataIntegrityIssue("id", "name", sql, List.of()))));
+    readYaml(checks, "data-integrity-checks.yaml", "data-integrity-checks", CLASS_PATH);
     assertEquals(63, checks.size());
 
     // Names should be unique
-    List<String> allNames =
-        checks.stream().map(DataIntegrityCheck::getName).collect(toUnmodifiableList());
+    List<String> allNames = checks.stream().map(DataIntegrityCheck::getName).toList();
     assertEquals(allNames.size(), Set.copyOf(allNames).size());
 
     // Config checks and Java checks should not have any of the same names
@@ -86,31 +73,27 @@ class DataIntegrityYamlReaderTest {
     assertEquals(0, nonYamlChecks.size());
 
     // Assert that all "codes" are unique.
-    List<String> codeList =
-        checks.stream().map(DataIntegrityCheck::getCode).sorted().collect(toUnmodifiableList());
+    List<String> codeList = checks.stream().map(DataIntegrityCheck::getCode).sorted().toList();
     assertEquals(codeList.size(), Set.copyOf(codeList).size());
 
     // Assert that codes consist of upper case letter and numbers only
     String regEx = "^[A-Z0-9]+$";
     Predicate<String> IS_NOT_CAPS = Pattern.compile(regEx).asPredicate().negate();
-    List<String> badCodes =
-        codeList.stream().filter(IS_NOT_CAPS).collect(Collectors.toUnmodifiableList());
+    List<String> badCodes = codeList.stream().filter(IS_NOT_CAPS).toList();
     assertEquals(0, badCodes.size());
 
     // Assert that all checks have details ID and are unique and UIDish
-    List<String> detailsIDs =
-        checks.stream().map(DataIntegrityCheck::getDetailsID).collect(toUnmodifiableList());
+    List<String> detailsIDs = checks.stream().map(DataIntegrityCheck::getDetailsID).toList();
     assertEquals(detailsIDs.size(), Set.copyOf(detailsIDs).size());
 
-    List<String> badDetailsUIDs = detailsIDs.stream().filter(e -> !isValidUid(e)).collect(toList());
+    List<String> badDetailsUIDs = detailsIDs.stream().filter(e -> !isValidUid(e)).toList();
     assertEquals(0, badDetailsUIDs.size());
 
     // Assert that all checks have summary ID and are unique and are UIDish
-    List<String> summaryIDs =
-        checks.stream().map(DataIntegrityCheck::getSummaryID).collect(toUnmodifiableList());
+    List<String> summaryIDs = checks.stream().map(DataIntegrityCheck::getSummaryID).toList();
 
     assertEquals(summaryIDs.size(), Set.copyOf(summaryIDs).size());
-    List<String> badSummaryUIDs = summaryIDs.stream().filter(e -> !isValidUid(e)).collect(toList());
+    List<String> badSummaryUIDs = summaryIDs.stream().filter(e -> !isValidUid(e)).toList();
     assertEquals(0, badSummaryUIDs.size());
 
     DataIntegrityCheck check = checks.get(0);
@@ -135,5 +118,63 @@ class DataIntegrityYamlReaderTest {
             .get(0)
             .getComment()
             .startsWith("SELECT uid,name from dataelementcategory"));
+  }
+
+  @Test
+  void testWithValidChecksFile() {
+    List<DataIntegrityCheck> checks = new ArrayList<>();
+    readYaml(checks, "test-data-integrity-checks.yaml", "test-data-integrity-checks", CLASS_PATH);
+    assertEquals(1, checks.size());
+  }
+
+  @Test
+  void testWithInvalidChecksFile() {
+    List<DataIntegrityCheck> checks = new ArrayList<>();
+    readYaml(checks, "invalid-file-checks.yaml", "test-data-integrity-checks", CLASS_PATH);
+    assertEquals(0, checks.size());
+  }
+
+  @Test
+  void testWithInvalidChecksDirectory() {
+    List<DataIntegrityCheck> checks = new ArrayList<>();
+    readYaml(checks, "test-data-integrity-checks.yaml", "invalid-integrity-checks", CLASS_PATH);
+    assertEquals(0, checks.size());
+  }
+
+  @Test
+  void testWithInvalidChecksDirectoryFromFileSystem() {
+    List<DataIntegrityCheck> checks = new ArrayList<>();
+    readYaml(checks, "data-integrity-checks.yaml", "invalid-integrity-checks", FILE_SYSTEM);
+    assertEquals(0, checks.size());
+  }
+
+  @Test
+  void testWithInvalidYamlFormat() {
+    List<DataIntegrityCheck> checks = new ArrayList<>();
+    readYaml(checks, "test-data-integrity-checks.yaml", "test-data-integrity-checks.yaml", FILE_SYSTEM);
+    assertEquals(0, checks.size());
+  }
+
+  private void readYaml(
+      List<DataIntegrityCheck> checks,
+      String fileChecks,
+      String checksDirectory,
+      DataIntegrityYamlReader.ResourceLocation resourceLocation) {
+    readDataIntegrityYaml(
+        new DefaultDataIntegrityService.DataIntegrityRecord(
+            resourceLocation,
+            fileChecks,
+            checksDirectory,
+            checks::add,
+            (property, defaultValue) -> defaultValue,
+            sql -> check -> new DataIntegritySummary(check, new Date(), new Date(), null, 1, 100d),
+            sql ->
+                check ->
+                    new DataIntegrityDetails(
+                        check,
+                        new Date(),
+                        new Date(),
+                        null,
+                        List.of(new DataIntegrityIssue("id", "name", sql, List.of())))));
   }
 }
